<resources>
    <string name="app_name">Classroom Community</string>

    <string name="navigation_drawer_open" translatable="false">Open Navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation drawer</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="default_last_name" translatable="false">Djuikom</string>
    <string name="default_first_name" translatable="false">Astride</string>
    <string name="login">Connexion</string>
    <string name="error_network_timeout">Network timeout</string>



    <string name="default_identifiant" translatable="false">astride</string>
    <string name="default_mot_de_passe" translatable="false">...........</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="s_authentifier">S\'AUTHENTIFIER</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="id_obligatoire">Identifiant obligatoire</string>
    <string name="pwd_obligatoire">Mot de passe obligatoire</string>
    <string name="quel_technologie_permet_de_se_connecter_un_r_seau_sans_fil">Quel technologie permet de se connecter à un réseau sans fil?</string>
    <string name="temps_restant">Time</string>
    <string name="qsm" translatable="false">Qsm</string>
    <string name="infrarouge">Infrarouge</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="wifi" translatable="false">Wifi</string>
    <string name="arrondis">Arrondissements de Paris</string>


    <string name="action_settings">Paramètres</string>
    <string name="title_activity_settings">Paramètres</string>

    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="title_auto_upload">Couleur du thème </string>
    <string name="summary_upload_over_wifi">Changer la couleur due thème</string>
    <string name="title_upload_quality">Taille Police</string>
    <string name="summary_upload_video_quality">Spécifier la taille de police que vous souhaitez</string>
    <string name="pref_title_notifications" translatable="false">Notifications</string>
    <string name="summary_choose_ringtone" translatable="false">Choose notification sound</string>
    <string name="pref_header_about">A propos</string>
    <string name="summary_about">Nous sommes un groupe d/étudiants, specialisés dans le developpement d/applications android et web.Nous serons fiers de vous apporter nos services</string>
    <string name="app_version" translatable="false">1.0.0</string>
    <string name="summary_support">Une question? Nous sommes à votre écoute</string>
    <string name="title_send_feedback"> Envoi Feedback</string>
    <string name="title_faq" translatable="false">FAQ</string>
    <string name="summary_faq">Voir les questions souvents posées</string>
    <string name="url_faq" translatable="false">https://www.classroomCommunity.info/privacy-policy/</string>
    <string name="privacy_policy">Politique de Confidentialité</string>
    <string name="title_terms">Termes &amp; Conditions</string>
    <string name="url_terms" translatable="false">https://www.classroomCommunity.info/terms-of-service/</string>
    <string name="title_version" translatable="false">Version</string>
    <string name="choose_email_client" translatable="false">Choose email client</string>
    <string name="title_gallery_storage">Mise à jour du profile</string>
    <string name="title_new_notification_sound">Me notifier quand un ami est connecté</string>
    <string name="title_vibrate" translatable="false">Vibration</string>
    <string name="summary_vibrate">Vibrer pendant la notification</string>
    <string name="key_upload_over_wifi" translatable="false">key_upload_over_wifi</string>
    <string name="key_gallery_name" translatable="false">key_gallery_name</string>
    <string name="key_upload_quality" translatable="false">key_upload_quality</string>
    <string name="notifications_new_message" translatable="false">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone" translatable="false">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate" translatable="false">key_vibrate</string>
    <string name="key_send_feedback" translatable="false">key_send_feedback</string>
    <string name="default_gallery_storage" translatable="false">Astride</string>
    <string name="liste_des_amis">Liste des amis</string>
    <string name="rechercher_un_ami">Rechercher un ami...</string>
    <string name="mot_de_pass">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="s_enregistrer_ici">S\'enregistrer ici.</string>
    <string name="theme" translatable="false">Theme</string>
    <string name="custom_settings" translatable="false">CUSTOM SETTINGS</string>
    <string name="about_us">About Us</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="username">Utilisateur</string>
    <string name="email_yahoo_fr" translatable="false">utilisateur@yahoo.fr</string>
    <string name="listes_des_amis">Friends\' List</string>
    <string name="quiz">Quiz</string>
    <string name="qr_code">QR Code</string>
    <string name="param_tres">Paramètres</string>
    <string name="a_propos">A propos</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="communication">Communication</string>
    <string name="partager">Partager</string>


</resources>
