<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        android:visibility="visible">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/icon_community2" />

        <TextView
            android:id="@+id/community_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:text="Classroom Community"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            android:background="#fff"
            android:drawableLeft="@drawable/ic_action_user"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="Nom"
            android:inputType="textPersonName|textCapWords"
            android:textSize="20sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/mot_de_pass"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editText2"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rectangle_pink"
            android:text="@string/connexion"
            android:textColor="#fff"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="17dp"
            android:text="@string/s_enregistrer_ici"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </RelativeLayout>
</ScrollView>